fix: fixing z-index problems

--- a/src/components/Canvas/Canvas.scss
+++ b/src/components/Canvas/Canvas.scss
@@ -28,7 +28,7 @@
   overflow: visible;
   height: 100%;
   pointer-events: none;
-  z-index: 1;
+  z-index: $z-index-low;
 }
 
 .canvas__label {
